# Lok.AI

./: .gitmodules  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  build.gradle  gradlew  gradlew.bat  settings.gradle
.github/workflows/: build-debug.yml  build-release.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: models.json
app/src/main/cpp/: CMakeLists.txt  lokai_jni.cpp
app/src/main/java/com/lokai/app/: CrashReporter.kt  MainActivity.kt  OnboardingDataStore.kt
app/src/main/java/com/lokai/app/data/agent/: AgentRepository.kt  ContextBuilder.kt  FileChunker.kt  FileProcessor.kt  TfIdfEngine.kt
app/src/main/java/com/lokai/app/data/device/: DeviceDetector.kt
app/src/main/java/com/lokai/app/data/download/: ChecksumVerifier.kt  DownloadManager.kt  DownloadRepository.kt
app/src/main/java/com/lokai/app/data/inference/: InferenceMode.kt  LlamaEngine.kt
app/src/main/java/com/lokai/app/data/models/: HuggingFaceSearch.kt  ModelCatalog.kt  (+1 more)
app/src/main/java/com/lokai/app/model/: AgentCategory.kt  AgentProfile.kt  AgentSession.kt  ChatSession.kt  DeviceProfile.kt  DeviceTier.kt  DownloadState.kt  DownloadedModel.kt  FileChunk.kt  ModelEntry.kt  ModelVariant.kt  ThinkingLog.kt
app/src/main/java/com/lokai/app/viewmodel/: AgentViewModel.kt  ChatViewModel.kt  DeviceViewModel.kt  DownloadViewModel.kt  ModelViewModel.kt  OnboardingViewModel.kt  SessionsViewModel.kt  SettingsViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  file_paths.xml
(+36 files in other folders)
